# ngfw_manager-2

./: .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  init_ssl.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release-please.yml
app/: config.py  debug_ngfw.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  objects.py  rules.py
app/core/: config.py
app/db/: database.py  models.py  session.py
app/infrastructure/: ngfw_client.py
app/schemas/: common.py  rule.py
app/services/: deploy_service.py  nat_service.py  parser.py  rule_creator.py  rule_service.py  sync_service.py  transfer_service.py
app/static/css/: app.css
app/static/js/: picker.js
app/templates/: base.html  debug_create.html  error.html  index.html  layout.html  login.html  logs.html  modals.html  nat.html  objects.html  policy.html  system.html
app/templates/components/: modals.html  sidebar.html
app/web/: router.py
nginx/: nginx.conf
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: rules_data.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_models.py  test_rule_service.py  test_sync_service.py
